--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
     }
   ],
   "require": {
-    "php": ">=5.3.9",
-    "psr/log": "~1.0",
-    "paragonie/constant_time_encoding": "^1|^2"
+    "php": ">=5.3.9"
   },
   "autoload": {
     "psr-4": {
@@ -22,7 +20,6 @@
     "psr/log-implementation": "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8.36",
-    "squizlabs/php_codesniffer": "~2.0"
+    "phpunit/phpunit": "~4.8.36"
   }
 }
