--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "squille/trail",
+  "type": "library",
   "description": "A php implementation to send log-messages to a Squille Trail compatible server",
+  "keywords": ["php", "logs", "monolog"],
   "license": "MIT",
   "authors": [
     {
@@ -10,17 +12,11 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.3.9"
+    "php": ">=5.3"
   },
   "autoload": {
     "psr-4": {
-      "Trail\\": "src/Trail"
+      "Squille\\Trail\\": "src/Trail"
     }
-  },
-  "provide": {
-    "psr/log-implementation": "~1.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~4.8.36"
   }
 }
