--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.3"
+    "php": ">=8.0.0",
+    "ext-openssl": "*",
+    "ext-sockets": "*"
   },
   "autoload": {
     "psr-4": {
